<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BillieJean</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="title_reboot_test">Reboot test</string>
    <string name="title_screen_power_test">Screen on/off test</string>
    <string name="title_lcd_test">Lcd test</string>
    <string name="title_cpu_stress_test">Cpu stress test</string>
    <string name="title_power_off_on_test">Shutdown clock loop test</string>
    <string name="title_reset_factory_test">Reset factory test</string>
    <string name="title_camera_test">camera test</string>
    <string name="title_Top1000_test">Top1000 test</string>
    <string name="title_OtaUp_test">OtaUP test</string>
    <string name="title_none">None</string>
    <string name="info_tag">Info:</string>
    <string name="running_case">Running!</string>
    <string name="already_execute_count">excuting %1$s times now.</string>
    <string name="already_executing">Executing:%1$s</string>
    <string name="total_execute_count">Target:%1$s</string>
    <string name="test_info">%1$s</string>
    <string name="begin_test_text">Execute!</string>
    <string name="reset_info_text">Reset infos</string>
    <string name="stop_test_text">Stop</string>
    <string name="select_unlimit_count">run without limit.</string>
    <string name="set_times_text">execute times:</string>
    <string name="case_selected_text">Select case : %1$s</string>
    <string name="set_restart_time">waiting time:</string>

    <string name="default_limit">0</string>
    <string name="restart_time">0</string>

    <string name="battery_info_low">Low power.</string>
    <string name="battery_info_ok">power is OK.</string>
    <string name="test_state_running">BillieJean is running.</string>
    <string name="test_state_pause">BillieJean is paused.</string>
    <string name="test_state_stop">BillieJean is stop.</string>
    <string name="test_complete">BillieJean is Completed.</string>
</resources>
