<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/case_selected_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/case_selected_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <CheckBox
            android:id="@+id/run_limit_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/select_unlimit_count" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/set_times_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:textSize="20sp"
            android:text="@string/set_times_text" />
        <EditText
            android:id="@+id/total_count_edit"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="3"
            android:maxEms="8"
            android:layout_gravity="left"
            android:inputType="number"
            android:text="@string/default_limit" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/begin_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/begin_test_text" />
        <Button
            android:id="@+id/reset_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/reset_info_text" />
        <Button
            android:id="@+id/stop_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/stop_test_text" />
    </LinearLayout>
</LinearLayout>