<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
              android:layout_gravity="center"
    android:layout_height="100dp"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/test_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_executing"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/test_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_execute_count"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_execute_count"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>